# pringo

./: .depend  .gitignore  Changes  META  Makefile  PRNG.ml  PRNG.mli  README.md  pringo.opam  stubs.c
docs/: PRNG.Chacha.Pure.html  PRNG.Chacha.State.html  PRNG.Chacha.html  PRNG.PURE.html  PRNG.STATE.html  PRNG.Splitmix.Pure.html  PRNG.Splitmix.State.html  PRNG.Splitmix.html  PRNG.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_PRNG.Chacha.Pure.html  type_PRNG.Chacha.State.html  type_PRNG.Chacha.html  type_PRNG.PURE.html  type_PRNG.STATE.html  type_PRNG.Splitmix.Pure.html  type_PRNG.Splitmix.State.html  type_PRNG.Splitmix.html  type_PRNG.html
test/: benchmark.ml  consistency.ml  generator.ml  reporting  testU01.ml  u01.ml
