opam-version: "2.0"
name: "pringo"
synopsis: "Pseudo-random, splittable number generators"
description:
  "Pseudo-random number generators that support splitting and two interfaces: one stateful, one purely functional"
maintainer: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
authors: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
license: "GPL v2 with static linking exception"
homepage: "https://github.com/xavierleroy/pringo"
bug-reports: "https://github.com/xavierleroy/pringo/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind"
]
build: make
install: [make "install"]
dev-repo: "git+https://https://github.com/xavierleroy/pringo"
