opam-version: "2.0"
name: "pringo"
synopsis: "Pseudo-random, splittable number generators"
description:
  "Pseudo-random number generators that support splitting and two interfaces: one stateful, one purely functional"
maintainer: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
authors: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
x-maintenance-intent: [("latest")]
homepage: "https://github.com/xavierleroy/pringo"
bug-reports: "https://github.com/xavierleroy/pringo/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind"
  "testu01" {with-test}
]
build: make
install: [make "install"]
run-test: [make "smalltest"] {ocaml:version >= "4.08"}
dev-repo: "git+https://https://github.com/xavierleroy/pringo"
